# Lux

./: .gitignore  CMakeLists.txt  README.md
dependencies/include/stb/: image_write.h
source/: Camera.cpp  Camera.hpp  Hit.cpp  Hit.hpp  Image.cpp  Image.hpp  Lux.cpp  Material.cpp  Material.hpp  Random.cpp  Random.hpp  Ray.cpp  Ray.hpp  Scene.cpp  Scene.hpp  Shape.cpp  Shape.hpp  Support.cpp  Support.hpp  Surface.cpp  Surface.hpp
