# CMake Version
CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

# Project Name
PROJECT(Lux)

# Header & Source Files
FILE(GLOB_RECURSE HEADERS "source/*.h" "source/*.hpp")
FILE(GLOB_RECURSE SOURCES "source/*.c" "source/*.cpp")

# Executable Target
ADD_EXECUTABLE(${PROJECT_NAME} ${HEADERS} ${SOURCES})

# Language Standard
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES CXX_STANDARD 17)
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES LINKER_LANGUAGE CXX)

# Dependencies
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC "${CMAKE_SOURCE_DIR}/dependencies/include")